agregue colores a los fondos

--- a/index.html
+++ b/index.html
@@ -139,11 +139,12 @@
     </button>
   </div>
 
-
+  <section class="linea">
+  </section>
   <section class="linea-container">
   </section>
 
-  <!-- seccion about us -->
+  <!-- seccion quienes somos -->
   <section id="aboutus" class="aboutus-container">
     <div data-aos="zoom-in">
       <h2 class="titulo-aboutus">¿Quiénes somos?</h2>
@@ -162,6 +163,8 @@
 
   <section class="linea-container">
   </section>
+  <section class="linea">
+  </section>
 
   <!-- seccion sticky -->
   <div class="floating-buttons">
@@ -173,14 +176,14 @@
     </ul>
   </div>
 
-  <!-- seccion about us -->
-  <section id="quehacemos" class="aboutus-container">
+  <!-- seccion que hacemos -->
+  <section id="quehacemos" class="quehacemos">
     <div data-aos="zoom-in">
       <h2 class="titulo-aboutus">¿Qué hacemos?</h2>
       <p class="parrafo-aboutus">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati, quae optio.
       </p>
     </div>
-    <div data-aos="fade-right" class="row row-cols-1 row-cols-md-2 g-4">
+    <div class="row row-cols-1 row-cols-md-2 g-4">
       <div class="col">
         <div class="card border-warning mb-3">
           <img src="https://i.ibb.co/yPTHj1C/vegetable-rows-of-pepper-grow-in-the-field-farming-agriculture-Landscape-with-agricultural-land.jpg" height="150"
@@ -192,7 +195,7 @@
           </div>
         </div>
       </div>
-      <div data-aos="fade-left" class="col">
+      <div class="col">
         <div class="card border-warning mb-3">
           <img src="https://i.ibb.co/1L5TqPg/Close-up-picture-of-ripe-golden-wheat-under-bright-evening-light-in-the-field.jpg" height="150"
             class="card-img-top imagen-productos" alt="...">
@@ -203,7 +206,7 @@
           </div>
         </div>
       </div>
-      <div data-aos="fade-right" class="col">
+      <div class="col">
         <div class="card border-warning mb-3">
           <img src="https://i.ibb.co/vxFBkNB/corn-field-on-crop-plant-for-harvesting.jpg" height="150" class="card-img-top imagen-productos"
             alt="...">
@@ -214,7 +217,7 @@
           </div>
         </div>
       </div>
-      <div data-aos="fade-left" class="col">
+      <div class="col">
         <div class="card border-warning mb-3">
           <img src="https://i.ibb.co/Kx6ShK7/A-pile-of-pearl-barley-grains-vegetarian-food-golden-seeds.jpg" height="150"
             class="card-img-top imagen-productos" alt="...">
@@ -229,33 +232,52 @@
     </div>
   </section>
 
-  <section class="linea-container">
+  <section class="linea">
   </section>
 
-  <!-- seccion about us -->
-  <section class="aboutus-container">
-    <div data-aos="zoom-in">
-      <h2 id="" class="titulo-aboutus">Lorem ipsum</h2>
+<!--     seccion about ys
+    <section class="mapa">
+      <div data-aos="zoom-in">
+        <h2 id="" class="titulo-aboutus">About us</h2>
+        <p class="parrafo-aboutus">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati, quae optio.
+          Quo, recusandae laudantium natus illo adipisci incidunt, officia, alias ratione nesciunt sapiente tempora at?
+          Iusto illo repellat labore.
+        </p>
+        <p class="parrafo-aboutus">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati, quae optio.
+        </p>
+        <p class="parrafo-aboutus">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati, quae optio.
+          Quo, recusandae laudantium natus illo adipisci incidunt, officia, alias ratione nesciunt sapiente tempora at?.
+        </p>
+        <h3 class="subtitulo-aboutus">#CerealsOnline</h3>
+      </div>
+    </section>
+  
+
+   <section class="linea">
+  </section>
+
+
+  sustentabilidad 
+  <section id="aboutus" class="sustentabilidad">
+    <div>
+      <h2 class="titulo-aboutus">sustentabilidad</h2>
       <p class="parrafo-aboutus">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati, quae optio.
         Quo, recusandae laudantium natus illo adipisci incidunt, officia, alias ratione nesciunt sapiente tempora at?
         Iusto illo repellat labore.
       </p>
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26269.017678488734!2d-58.369778418004906!3d-34.613587079612856!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a334d9c2d70389%3A0xe7b5e9ee316678f!2sPuerto%20Madero%2C%20CABA!5e0!3m2!1ses!2sar!4v1630347399330!5m2!1ses!2sar"
-        width="800" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-      <p class="parrafo-aboutus">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati, quae optio.
-        Quo, recusandae laudantium natus illo adipisci incidunt, officia, alias ratione nesciunt sapiente tempora at?.
-      </p>
+
     </div>
   </section>
 
-  <section class="linea-container">
+
+  <section class="linea">
   </section>
 
-  <!-- seccion about us -->
-  <section class="aboutus-container">
+
+  seccion legales 
+  <section id="aboutus" class="legales">
     <div data-aos="zoom-in">
-      <h2 id="" class="titulo-aboutus">About us</h2>
+      <h2 class="titulo-aboutus">¿Quiénes somos?</h2>
       <p class="parrafo-aboutus">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati, quae optio.
         Quo, recusandae laudantium natus illo adipisci incidunt, officia, alias ratione nesciunt sapiente tempora at?
         Iusto illo repellat labore.
@@ -267,13 +289,22 @@
       </p>
       <h3 class="subtitulo-aboutus">#CerealsOnline</h3>
     </div>
+  </section>   -->
+
+  <!-- seccion mapa -->
+  <section class="mapa">
+    <div data-aos="zoom-in">
+      <h2 id="" class="titulo-aboutus">Lorem ipsum</h2>
+      <p class="parrafo-aboutus">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+      </p>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26269.017678488734!2d-58.369778418004906!3d-34.613587079612856!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a334d9c2d70389%3A0xe7b5e9ee316678f!2sPuerto%20Madero%2C%20CABA!5e0!3m2!1ses!2sar!4v1630347399330!5m2!1ses!2sar"
+       width="800" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </div>
   </section>
 
-  <section class="linea-container">
+  <section class="linea">
   </section>
-
-
-
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
