--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/f2f2acd656.js" crossorigin="anonymous"></script>
+  <!-- iluminacion palabras -->
+  <style>
+    ::-moz-selection { /* Code for Firefox */
+      color: #ffbb33;
+      background: #217A5C;
+    }
+    
+    ::selection {
+      color: #ffbb33;
+      background: #217A5C;
+    }
+  </style>
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -109,7 +121,7 @@
         <img src="https://i.ibb.co/yPTHj1C/vegetable-rows-of-pepper-grow-in-the-field-farming-agriculture-Landscape-with-agricultural-land.jpg" height="850"
           class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5 class="titulo-video">Ahora puede adquirir cereales como un importador directo, reduciendo sus costos.</h5>
+          <h5 class="titulo-video box">Ahora puede adquirir cereales como un importador directo, reduciendo sus costos.</h5>
           <p class="parrafo-video"></p>
         </div>
       </div>
@@ -117,14 +129,14 @@
         <img src="https://i.ibb.co/1L5TqPg/Close-up-picture-of-ripe-golden-wheat-under-bright-evening-light-in-the-field.jpg" height="850"
           class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5 class="titulo-video">Ordene sus productos en línea de manera inteligente.</h5>
+          <h5 class="titulo-video box">Ordene sus productos en línea de manera inteligente.</h5>
           <p class="parrafo-video"></p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="https://i.ibb.co/rHRGf8D/green-leaves-and-beans-of-young-soybeans-in-the-field.jpg" alt="" height="850" class="d-block w-100">
         <div class="carousel-caption d-none d-md-block">
-          <h5 class="titulo-video">CerealsOnline ofrece los costos más bajos para importar sus productos.</h5>
+          <h5 class="titulo-video box">CerealsOnline ofrece los costos más bajos para importar sus productos.</h5>
           <p class="parrafo-video"></p>
         </div>
       </div>
@@ -146,16 +158,15 @@
 
   <!-- seccion quienes somos -->
   <section id="aboutus" class="aboutus-container">
-    <div data-aos="zoom-in">
+    <div data-aos="fade-up">
       <h2 class="titulo-aboutus">¿Quiénes somos?</h2>
-      <p class="parrafo-aboutus">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati, quae optio.
-        Quo, recusandae laudantium natus illo adipisci incidunt, officia, alias ratione nesciunt sapiente tempora at?
-        Iusto illo repellat labore.
+      <p class="parrafo-aboutus">Somos un grupo de profesionales abocados a la comercialización de granos y azúcar a nivel mundial. 
+        Propiciamos el trabajo en red, con acceso instantáneo a la información.
       </p>
-      <p class="parrafo-aboutus">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati, quae optio.
+      <p class="parrafo-aboutus">Con varios años de trayectoria en el mercado exterior, hemos detectado la necesidad de importar cereales, tanto como trigo, maíz, soja, cebada, entre otros,
+        en Europa, para que los pequeños compradores puedan acceder a precios competitivos, dando más herramientas y opciones a la hora de elegir a su proveedor.
       </p>
-      <p class="parrafo-aboutus">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati, quae optio.
-        Quo, recusandae laudantium natus illo adipisci incidunt, officia, alias ratione nesciunt sapiente tempora at?.
+      <p class="parrafo-aboutus">Nuestros valores:  Respeto, trabajo en equipo, profesionalismo, compromiso, satisfacción de los clientes, pragmatismo y proactividad.
       </p>
       <h3 class="subtitulo-aboutus">#CerealsOnline</h3>
     </div>
@@ -178,12 +189,23 @@
 
   <!-- seccion que hacemos -->
   <section id="quehacemos" class="quehacemos">
-    <div data-aos="zoom-in">
-      <h2 class="titulo-aboutus">¿Qué hacemos?</h2>
-      <p class="parrafo-aboutus">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati, quae optio.
-      </p>
-    </div>
-    <div class="row row-cols-1 row-cols-md-2 g-4">
+    <div data-aos="flip-up">
+      <div class="container">
+        <div class="box">
+          <h2 class="titulo-aboutus">¿Qué hacemos?</h2>
+          <p class="parrafo-aboutus">Compramos directo a productores de Argentina, Brasil, Estados Unidos, entre otros orígenes,
+            y los importamos directamente, evitando intermediarios y costos extras.
+         </p>
+         <p class="parrafo-aboutus">Esta estructura de representación empresaria cuenta con una importante nómina de profesionales de primer nivel y experiencia única, capaz de
+           liderar el complejo camino que hoy supone la comercialización granaria, en búsqueda permanente de la excelencia necesaria para sostener valores competitivos en el mercado.
+         </p>
+         <p class="parrafo-aboutus">A través de nuestra plataforma, creamos un pool de compradores 
+           directos para que lleguen a completar el volumen de un buque de carga mínima, y así entre todos, poder importar en pequeñas cantidades.
+         </p>
+        </div>
+      </div>
+      </div>
+   <!--  <div class="row row-cols-1 row-cols-md-2 g-4">
       <div class="col">
         <div class="card border-warning mb-3">
           <img src="https://i.ibb.co/yPTHj1C/vegetable-rows-of-pepper-grow-in-the-field-farming-agriculture-Landscape-with-agricultural-land.jpg" height="150"
@@ -229,13 +251,15 @@
         </div>
       </div>
     </div>
-    </div>
+    </div> -->
   </section>
 
+  <section class="linea-container">
+  </section>
   <section class="linea">
   </section>
 
-<!--     seccion about ys
+<!--   seccion about ys
     <section class="mapa">
       <div data-aos="zoom-in">
         <h2 id="" class="titulo-aboutus">About us</h2>
@@ -289,9 +313,9 @@
       </p>
       <h3 class="subtitulo-aboutus">#CerealsOnline</h3>
     </div>
-  </section>   -->
+  </section>   
 
-  <!-- seccion mapa -->
+  seccion mapa 
   <section class="mapa">
     <div data-aos="zoom-in">
       <h2 id="" class="titulo-aboutus">Lorem ipsum</h2>
@@ -303,8 +327,10 @@
     </div>
   </section>
 
-  <section class="linea">
+  <section class="linea-container">
   </section>
+  <section class="linea">
+  </section> -->
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
@@ -319,22 +345,3 @@
 </body>
 
 </html>
-
-
-
-
-<!--      seccion video 
-    <section>
-      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active container-video">
-              <video src="video/Sunrise-shining-on-the-wheat-field-946493.mp4" class="video-banner" autoplay muted loop></video>
-              <div class="carousel-caption d-none d-md-block ">
-                <h2 class="titulo-video">Lorem ipsum</h2>
-                <p class="parrafo-video">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores nobis mollitia hic quidem 
-                    consequatur rerum cupiditate voluptatem quisquam laboriosam porro.</p>
-              </div>
-            </div>
-          </div>
-      </div>
-  </section> -->
