agrego las cards y fondos nuevos

--- a/index.html
+++ b/index.html
@@ -30,15 +30,7 @@
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Teko&display=swap" rel="stylesheet">
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap" rel="stylesheet">
 
 
 
@@ -50,7 +42,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"><img src="img/Logo-final.png" height="150" class="imagen-header"
+        <a class="navbar-brand" href="index.html"><img src="img/Logo-final.png" height="120" class="imagen-header"
             alt="logo de cereals"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -59,16 +51,16 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav align-items-center">
             <li class="nav-item">
-              <a class="nav-link menu" href="#aboutus">¿Quiénes somos?</a>
+              <a class="nav-link menu menu-principal" href="#aboutus">¿Quiénes somos?</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link menu" href="#quehacemos">¿Qué hacemos?</a>
+              <a class="nav-link menu menu-principal" href="#quehacemos">¿Qué hacemos?</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link menu" href="#">Sustentabilidad</a>
+              <a class="nav-link menu menu-principal" href="#">Sustentabilidad</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link menu" href="#">Legales</a>
+              <a class="nav-link menu menu-principal" href="#">Legales</a>
             </li>
             <li class="nav-item">
               <a class="nav-link menu login" href="#"><img src="img/br.png" class="bandera-menu" height="16"
@@ -118,25 +110,25 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="https://i.ibb.co/yPTHj1C/vegetable-rows-of-pepper-grow-in-the-field-farming-agriculture-Landscape-with-agricultural-land.jpg" height="850"
+        <img src="https://i.ibb.co/drtpnSf/vegetable-rows-of-pepper-grow-in-the-field-farming-agriculture-2-min.jpg" height="850"
           class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5 class="titulo-video box">Ahora puede adquirir cereales como un importador directo, reduciendo sus costos.</h5>
+          <h5 class="titulo-video">Ahora puede adquirir cereales como un importador directo, reduciendo sus costos.</h5>
           <p class="parrafo-video"></p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="https://i.ibb.co/1L5TqPg/Close-up-picture-of-ripe-golden-wheat-under-bright-evening-light-in-the-field.jpg" height="850"
+        <img src="https://i.ibb.co/q9SHrLy/green-leaves-and-beans-of-young-soybeans-in-the-field-2-min.jpg" height="850"
           class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5 class="titulo-video box">Ordene sus productos en línea de manera inteligente.</h5>
+          <h5 class="titulo-video">Ordene sus productos en línea de manera inteligente.</h5>
           <p class="parrafo-video"></p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="https://i.ibb.co/rHRGf8D/green-leaves-and-beans-of-young-soybeans-in-the-field.jpg" alt="" height="850" class="d-block w-100">
+        <img src="https://i.ibb.co/n1T8ysx/close-up-picture-of-ripe-golden-wheat-under-bright-evening-light-in-the-field-3-min.jpg" alt="" height="850" class="d-block w-100">
         <div class="carousel-caption d-none d-md-block">
-          <h5 class="titulo-video box">CerealsOnline ofrece los costos más bajos para importar sus productos.</h5>
+          <h5 class="titulo-video">CerealsOnline ofrece los costos más bajos para importar sus productos.</h5>
           <p class="parrafo-video"></p>
         </div>
       </div>
@@ -151,10 +143,63 @@
     </button>
   </div>
 
-  <section class="linea">
-  </section>
   <section class="linea-container">
+  </section> 
+
+  <!-- seccion cards -->
+  <section class="card-container">
+      <div class="row row-cols-1 row-cols-md-2 g-4">
+      <div class="col">
+        <div class="card border-warning card-imagen1 mb-3">
+          <div class="imagen-container">
+            <h5 class="card-title text-center">Maiz</h5>
+          </div>
+          <div class="card-body">
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+              content.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card border-warning card-imagen2 mb-3">
+          <div class="imagen-container">
+          <h5 class="card-title text-center">Soja</h5>
+          </div>
+          <div class="card-body">
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+              content.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card border-warning card-imagen3 mb-3">
+          <div class="imagen-container">
+          <h5 class="card-title text-center">Cebada</h5>
+         </div>
+          <div class="card-body">
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+              content.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card border-warning card-imagen4 mb-3">
+          <div class="imagen-container">
+          <h5 class="card-title text-center">Harina</h5>
+          </div>
+          <div class="card-body">
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+              content.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
   </section>
+
+
+  <section class="linea-container">
+  </section> 
 
   <!-- seccion quienes somos -->
   <section id="aboutus" class="aboutus-container">
@@ -190,8 +235,8 @@
   <!-- seccion que hacemos -->
   <section id="quehacemos" class="quehacemos">
     <div data-aos="flip-up">
-      <div class="container">
-        <div class="box">
+      <div class="container box1">
+        <div>
           <h2 class="titulo-aboutus">¿Qué hacemos?</h2>
           <p class="parrafo-aboutus">Compramos directo a productores de Argentina, Brasil, Estados Unidos, entre otros orígenes,
             y los importamos directamente, evitando intermediarios y costos extras.
@@ -205,54 +250,8 @@
         </div>
       </div>
       </div>
-   <!--  <div class="row row-cols-1 row-cols-md-2 g-4">
-      <div class="col">
-        <div class="card border-warning mb-3">
-          <img src="https://i.ibb.co/yPTHj1C/vegetable-rows-of-pepper-grow-in-the-field-farming-agriculture-Landscape-with-agricultural-land.jpg" height="150"
-            class="card-img-top imagen-productos" alt="...">
-          <div class="card-body">
-            <h5 class="card-title text-center">Maiz</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-              content.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card border-warning mb-3">
-          <img src="https://i.ibb.co/1L5TqPg/Close-up-picture-of-ripe-golden-wheat-under-bright-evening-light-in-the-field.jpg" height="150"
-            class="card-img-top imagen-productos" alt="...">
-          <div class="card-body">
-            <h5 class="card-title text-center">Soja</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-              content.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card border-warning mb-3">
-          <img src="https://i.ibb.co/vxFBkNB/corn-field-on-crop-plant-for-harvesting.jpg" height="150" class="card-img-top imagen-productos"
-            alt="...">
-          <div class="card-body">
-            <h5 class="card-title text-center">Cebada</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-              content.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card border-warning mb-3">
-          <img src="https://i.ibb.co/Kx6ShK7/A-pile-of-pearl-barley-grains-vegetarian-food-golden-seeds.jpg" height="150"
-            class="card-img-top imagen-productos" alt="...">
-          <div class="card-body">
-            <h5 class="card-title text-center">Harina</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-              content.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    </div> -->
   </section>
+
 
   <section class="linea-container">
   </section>
