--- a/index.html
+++ b/index.html
@@ -62,31 +62,35 @@
             <li class="nav-item">
               <a class="nav-link menu menu-principal" href="#">Legales</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link menu login" href="#"><img src="img/br.png" class="bandera-menu" height="16"
-                  alt="bandera de Brasil"></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link menu login" href="#"><img src="img/fr.png" class="bandera-menu" height="16"
-                  alt="bandera de Francia"></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link menu login" href="#"><img src="img/esp.svg" class="bandera-menu" height="16"
-                  alt="bandera de España"></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link menu login" href="#"><img src="img/gb.png" class="bandera-menu" height="16"
-                  alt="bandera de Gran Bretaña"></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link menu login" href="#">LOGIN</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link menu login" href="#">|</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link menu login" href="#">SIGN UP</a>
-            </li>
+            <div class="d-flex">
+              <li class="nav-item mx-1 mx-sm-0">
+                <a class="nav-link menu login" href="#"><img src="img/br.png" class="bandera-menu" height="16"
+                    alt="bandera de Brasil"></a>
+              </li>
+              <li class="nav-item mx-1 mx-sm-0">
+                <a class="nav-link menu login" href="#"><img src="img/fr.png" class="bandera-menu" height="16"
+                    alt="bandera de Francia"></a>
+              </li>
+              <li class="nav-item mx-1 mx-sm-0">
+                <a class="nav-link menu login" href="#"><img src="img/esp.svg" class="bandera-menu" height="16"
+                    alt="bandera de España"></a>
+              </li>
+              <li class="nav-item mx-1 mx-sm-0">
+                <a class="nav-link menu login" href="#"><img src="img/gb.png" class="bandera-menu" height="16"
+                    alt="bandera de Gran Bretaña"></a>
+              </li>
+            </div>
+            <div class="d-flex">
+              <li class="nav-item">
+                <a class="nav-link menu login" href="#">LOGIN</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link menu login mx-2 mx-lg-0" href="#">|</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link menu login" href="#">SIGN UP</a>
+              </li>
+            </div>
           </ul>
         </div>
       </div>
@@ -97,7 +101,7 @@
   <section class="linea-container">
   </section>
 
-  <!-- seccion carrousel -->
+  <!-- seccion carousel -->
 
   <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
@@ -111,24 +115,24 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="https://i.ibb.co/drtpnSf/vegetable-rows-of-pepper-grow-in-the-field-farming-agriculture-2-min.jpg" height="850"
-          class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5 class="titulo-video">Ahora puede adquirir cereales como un importador directo, reduciendo sus costos.</h5>
+          class="d-block w-100 img-carousel" alt="...">
+        <div class="carousel-caption d-block d-md-block">
+          <h5 class="titulo-carousel">Ahora puede adquirir cereales como un importador directo, reduciendo sus costos.</h5>
           <p class="parrafo-video"></p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="https://i.ibb.co/q9SHrLy/green-leaves-and-beans-of-young-soybeans-in-the-field-2-min.jpg" height="850"
-          class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5 class="titulo-video">Ordene sus productos en línea de manera inteligente.</h5>
+          class="d-block w-100 img-carousel" alt="...">
+        <div class="carousel-caption d-block d-md-block">
+          <h5 class="titulo-carousel">Ordene sus productos en línea de manera inteligente.</h5>
           <p class="parrafo-video"></p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="https://i.ibb.co/n1T8ysx/close-up-picture-of-ripe-golden-wheat-under-bright-evening-light-in-the-field-3-min.jpg" alt="" height="850" class="d-block w-100">
-        <div class="carousel-caption d-none d-md-block">
-          <h5 class="titulo-video">CerealsOnline ofrece los costos más bajos para importar sus productos.</h5>
+        <img src="https://i.ibb.co/n1T8ysx/close-up-picture-of-ripe-golden-wheat-under-bright-evening-light-in-the-field-3-min.jpg" alt="" height="850" class="d-block w-100 img-carousel">
+        <div class="carousel-caption d-block d-md-block">
+          <h5 class="titulo-carousel">CerealsOnline ofrece los costos más bajos para importar sus productos.</h5>
           <p class="parrafo-video"></p>
         </div>
       </div>
@@ -223,7 +227,7 @@
   </section>
 
   <!-- seccion sticky -->
-  <div class="floating-buttons">
+  <div class="floating-buttons d-none d-sm-block">
     <ul>
       <li><a href="">MAIZ</a></li>
       <li><a href="">SOJA</a></li>
