--- a/index.html
+++ b/index.html
@@ -44,6 +44,26 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html"><img src="img/Logo-final.png" height="120" class="imagen-header"
             alt="logo de cereals"></a>
+      <ul class="navbar-nav banderas-mobile align-items-center justify-content-center">
+        <div class="d-flex d-lg-none">
+          <li class="nav-item mx-1 mx-sm-0">
+            <a class="nav-link menu login" href="#"><img src="img/br.png" class="bandera-menu" height="16"
+                alt="bandera de Brasil"></a>
+          </li>
+          <li class="nav-item mx-1 mx-sm-0">
+            <a class="nav-link menu login" href="#"><img src="img/fr.png" class="bandera-menu" height="16"
+                alt="bandera de Francia"></a>
+          </li>
+          <li class="nav-item mx-1 mx-sm-0">
+            <a class="nav-link menu login" href="#"><img src="img/esp.svg" class="bandera-menu" height="16"
+                alt="bandera de España"></a>
+          </li>
+          <li class="nav-item mx-1 mx-sm-0">
+            <a class="nav-link menu login" href="#"><img src="img/gb.png" class="bandera-menu" height="16"
+                alt="bandera de Gran Bretaña"></a>
+          </li>
+        </div>
+      </ul>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -62,7 +82,7 @@
             <li class="nav-item">
               <a class="nav-link menu menu-principal" href="#">Legales</a>
             </li>
-            <div class="d-flex">
+            <div class="d-none d-sm-flex">
               <li class="nav-item mx-1 mx-sm-0">
                 <a class="nav-link menu login" href="#"><img src="img/br.png" class="bandera-menu" height="16"
                     alt="bandera de Brasil"></a>
@@ -151,7 +171,7 @@
   </section> 
 
   <!-- seccion cards -->
-  <section class="card-container">
+  <section class="container mt-5 mb-5">
       <div class="row row-cols-1 row-cols-md-2 g-4">
       <div class="col">
         <div class="card border-warning card-imagen1 mb-3">
@@ -208,7 +228,7 @@
   <!-- seccion quienes somos -->
   <section id="aboutus" class="aboutus-container">
     <div data-aos="fade-up">
-      <h2 class="titulo-aboutus">¿Quiénes somos?</h2>
+      <h2 class="titulo-aboutus pt-5">¿Quiénes somos?</h2>
       <p class="parrafo-aboutus">Somos un grupo de profesionales abocados a la comercialización de granos y azúcar a nivel mundial. 
         Propiciamos el trabajo en red, con acceso instantáneo a la información.
       </p>
@@ -217,7 +237,7 @@
       </p>
       <p class="parrafo-aboutus">Nuestros valores:  Respeto, trabajo en equipo, profesionalismo, compromiso, satisfacción de los clientes, pragmatismo y proactividad.
       </p>
-      <h3 class="subtitulo-aboutus">#CerealsOnline</h3>
+      <h3 class="subtitulo-aboutus pb-5">#CerealsOnline</h3>
     </div>
   </section>
 
@@ -239,16 +259,16 @@
   <!-- seccion que hacemos -->
   <section id="quehacemos" class="quehacemos">
     <div data-aos="flip-up">
-      <div class="container box1">
+      <div class="container box1 text-center">
         <div>
-          <h2 class="titulo-aboutus">¿Qué hacemos?</h2>
+          <h2 class="titulo-aboutus pt-5">¿Qué hacemos?</h2>
           <p class="parrafo-aboutus">Compramos directo a productores de Argentina, Brasil, Estados Unidos, entre otros orígenes,
             y los importamos directamente, evitando intermediarios y costos extras.
          </p>
          <p class="parrafo-aboutus">Esta estructura de representación empresaria cuenta con una importante nómina de profesionales de primer nivel y experiencia única, capaz de
            liderar el complejo camino que hoy supone la comercialización granaria, en búsqueda permanente de la excelencia necesaria para sostener valores competitivos en el mercado.
          </p>
-         <p class="parrafo-aboutus">A través de nuestra plataforma, creamos un pool de compradores 
+         <p class="parrafo-aboutus mb-5">A través de nuestra plataforma, creamos un pool de compradores 
            directos para que lleguen a completar el volumen de un buque de carga mínima, y así entre todos, poder importar en pequeñas cantidades.
          </p>
         </div>
