--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
 </head>
 
 <body>
+
+  <!-- SPINNER LOADING -->
+  <div id="loading" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+
+  <div id="cuerpo" style="display: none !important;">
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
@@ -217,7 +224,6 @@
           </div>
         </div>
       </div>
-    </div>
     </div>
   </section>
 
@@ -423,7 +429,9 @@
   </section>
   <section class="linea">
   </section> -->
+  </div>
 
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
     AOS.init();
@@ -434,6 +442,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"
     integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous">
   </script>
+  <script src="js/functions.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
