arregle las queries

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               <li class="nav-item">
                 <a class="nav-link menu menu-principal" href="#legales">Legales</a>
               </li>
-              <div class="d-none d-sm-flex">
+              <div class="d-none d-sm-flex lenguajes-login">
                 <li class="nav-item mx-1 mx-sm-0">
                   <a class="nav-link menu login" href="#"><img src="img/br.png" class="bandera-menu" height="16"
                       alt="bandera de Brasil"></a>
@@ -348,7 +348,7 @@
         <p class="parrafo-aboutus">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex doloremque cumque sunt asperiores, nostrum
           ab, hic corrupti voluptatibus aperiam in quia, soluta debitis recusandae dolorum officia corporis? Velit, deleniti aut!
         </p>
-        <p class="parrafo-aboutus">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium officia cupiditate autem, neque esse quas minima porro vero, 
+        <p class="parrafo-aboutus pb-5">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium officia cupiditate autem, neque esse quas minima porro vero, 
           corporis commodi sint velit assumenda, distinctio repudiandae dolore provident? Possimus, eaque perferendis? Lorem, ipsum dolor sit amet consectetur adipisicing 
           elit. Quas sed veniam amet nostrum ipsa reiciendis, ratione animi minus, consectetur consequuntur sapiente tenetur, fugit incidunt nulla facere aperiam saepe. Quis, nemo.
         </p>
@@ -361,18 +361,18 @@
     <!-- seccion legales -->
     <section class="seccion-legales">
       <div>
-        <h2 class="titulo-aboutus pt-5">Legales</h2>
-        <p class="parrafo-aboutus">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam non
+        <h2 class="titulo-aboutus pt-5 color-font">Legales</h2>
+        <p class="parrafo-aboutus color-font">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam non
           pariatur natus laboriosam eos error magni. Quidem necessitatibus velit nihil soluta voluptatem, unde 
           accusamus nisi, neque excepturi magni sed? Sapiente! Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Asperiores, vel veniam laudantium sed at culpa eos ut voluptas commodi, 
           repellendus iure expedita aperiam nihil a mollitia amet eveniet placeat doloribus.
         </p>
-        <p class="parrafo-aboutus">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus facilis sint
+        <p class="parrafo-aboutus color-font">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus facilis sint
           tempora, odit exercitationem libero eius asperiores blanditiis.
         </p>
         <!-- Button trigger modal -->
-        <button type="button" class="btn btn-success boton-mas-info" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+        <button type="button" class="btn btn-success boton-mas-info mx-auto mx-sm-0 mt-3 mt-sm-0" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
           Más información
         </button>
 
@@ -447,11 +447,13 @@
             <div class="col-lg-3 col-md-6 footer-contact">
               <h3 id="footer-title">CEREALS ONLINE</h3>
               <p>
-                Callao 1080 <br>
-                Ciudad Autónoma de Buenos Aires<br>
-                Argentina <br><br>
-                <strong>Teléfono:</strong> +54 11 3055 3465<br>
-                <strong>Email:</strong> info@cereals.com<br>
+                España: <br>
+                Paseo de la Castellana 295c Planta 18 Torre Cristal, Madrid (CP28046)<br>
+                Argentina: <br>
+                Av. del Libertador 2442 Piso 4, Olivos, Vicente Lopez, Buenos Aires (CP1636) <br>
+                Brasil: <br>
+                Comendador Correa Junior 579, Paranaguá (CP83203-560)<br><br>
+                <strong>Email:</strong> info@cereals-online.com<br>
               </p>
             </div>
 
@@ -496,10 +498,6 @@
               &copy; Copyright <strong><span>Cereals Online</span></strong>. All Rights Reserved
             </div>
             <div class="credits">
-              <!-- All the links in the footer should remain intact. -->
-              <!-- You can delete the links only if you purchased the pro version. -->
-              <!-- Licensing information: https://bootstrapmade.com/license/ -->
-              <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/techie-free-skin-bootstrap-3/ -->
               Designed by Lemur Media Studio</a>
             </div>
           </div>
