arregle queries barcos

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
     <!-- cards barcos -->
     <!-- barco 1 -->
     <section class="seccion-barcos">
-      <div class="container d-flex flex-wrap wrap d-sm-block">
+      <div class="container d-flex flex-wrap wrap d-inline-block">
         <div class="card card-barcos mx-auto" style="width: 20rem; height: 35rem;">
           <h2 class="titulo-barcos">Maíz</h2>
           <svg class="img-svg" version="1.1" xmlns="http://www.w3.org/2000/svg"
