aumente el tamaño de el logo de cereals-online

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" id="index" href="index.html"><img src="img/Logo-final.png" height="120"
+          <a class="navbar-brand" id="index" href="index.html"><img src="img/Logo-final.png" height="145"
               class="imagen-header" alt="logo de cereals"></a>
           <ul class="navbar-nav banderas-mobile align-items-center justify-content-center">
             <div class="d-flex d-lg-none">
@@ -739,23 +739,23 @@
                 <h5>Limitación de responsabilidades/funcionamiento</h5>
                 <p>1. Usted reconoce y acepta expresamente que <strong>CEREALS ONLINE</strong>, sus filiales y sus
                   licenciantes no serán responsables ante usted por:</p>
-                <p><strong>o</strong>Ningún daño que usted pudiera ocasionar al propio usuario o a terceros, incluyendo
+                <p><strong>o</strong> Ningún daño que usted pudiera ocasionar al propio usuario o a terceros, incluyendo
                   cualquier pérdida de beneficios, ya sea directa o indirecta, cualquier pérdida de prestigio
                   profesional o de reputación empresarial, cualquier pérdida de datos por su parte, gastos del
                   abastecimiento de bienes o de servicios sustitutivos u otras pérdidas intangibles;</p>
-                <p><strong>o</strong>Ninguna pérdida o daño que usted pueda ocasionar, incluidas, entre otras, pérdidas
+                <p><strong>o</strong> Ninguna pérdida o daño que usted pueda ocasionar, incluidas, entre otras, pérdidas
                   o daños originados como consecuencia de:</p>
-                <p><strong></strong>La confianza depositada por su parte en la exhaustividad, en la precisión o en la
+                <p><strong>•</strong> La confianza depositada por su parte en la exhaustividad, en la precisión o en la
                   existencia de publicidad o como consecuencia de cualquier relación o transacción entre usted y otro
                   anunciante o patrocinador cuya publicidad aparezca en los servicios;</p>
-                <p><strong></strong>Los cambios que <strong>CEREALS ONLINE</strong> pueda incorporar en los servicios o
+                <p><strong>•</strong> Los cambios que <strong>CEREALS ONLINE</strong> pueda incorporar en los servicios o
                   la interrupción temporal o definitiva de estos o de alguna de sus funciones;</p>
-                <p><strong></strong>La eliminación o el daño del contenido y de otros datos de divulgación que se
+                <p><strong>•</strong> La eliminación o el daño del contenido y de otros datos de divulgación que se
                   alojan en los servicios o que se ofrecen a través de estos, así como la imposibilidad de almacenarlos;
                 </p>
-                <p><strong></strong>La imposibilidad de proporcionar a <strong>CEREALS ONLINE</strong> información
+                <p><strong>•</strong> La imposibilidad de proporcionar a <strong>CEREALS ONLINE</strong> información
                   precisa de la cuenta;</p>
-                <p><strong></strong>La negligencia por no haber preservado su contraseña o la información de su cuenta
+                <p><strong>•</strong> La negligencia por no haber preservado su contraseña o la información de su cuenta
                   de forma segura y confidencial.</p>
                 <h5>Miscelánea</h5>
                 <p>1. Las presentes Condiciones constituyen el acuerdo legal completo entre usted y <strong>CEREALS
